welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: Missing closing brace `}' assumed here
var fini = false
^BDRBuggle:7: error: ';' expected but 'if' found.
  } if (litMessage() == L) {
    ^